# src/prescription-service/entity/medication.go
@@ -7,7 +7,8 @@ import (
 type MedicationEntity struct {
 	record.BaseEntity
 	DrugName    *string `gorm:"not null"`
-	Dosage      *string `gorm:"not null"`
+	Stock       *int    `gorm:"not null"`
+	Unit        *string `gorm:"not null;check:unit IN ('tablet','capsule','syrup','injection','ointment','drop','inhaler','patch','suppository','other');default:'tablet'"`
 	Description *string `gorm:"type:text"`
 
 	PrescMeds []*PrescMedEntity `gorm:"foreignKey:MedicationID;references:ID"`
