# src/prescription-service/server/route.go
@@ -1,9 +1,11 @@
 package server
 
 import (
+	"github.com/Hospital-Microservice/hospital-core/middleware"
 	"github.com/Hospital-Microservice/hospital-core/transport/http/method"
 	"github.com/Hospital-Microservice/hospital-core/transport/http/route"
 	"github.com/Hospital-Microservice/prescription-service/handler"
+	"github.com/labstack/echo/v4"
 )
 
 func Routes(handler handler.PrescriptionHandler) []route.GroupRoute {
@@ -15,6 +17,9 @@ func Routes(handler handler.PrescriptionHandler) []route.GroupRoute {
 					Path:    "/create",
 					Method:  method.POST,
 					Handler: handler.HandlePrescriptionCreate,
+					Middlewares: []echo.MiddlewareFunc{
+						middleware.JWT(),
+					},
 				},
 				// {
 				// 	Path:    "/update",
@@ -25,6 +30,9 @@ func Routes(handler handler.PrescriptionHandler) []route.GroupRoute {
 					Path:    "/detail/:id",
 					Method:  method.GET,
 					Handler: handler.HandlePrescriptionDetail,
+					Middlewares: []echo.MiddlewareFunc{
+						middleware.JWT(),
+					},
 				},
 				// {
 				// 	Path:    "/filter",
@@ -36,6 +44,34 @@ func Routes(handler handler.PrescriptionHandler) []route.GroupRoute {
 				// 	Method:  method.DELETE,
 				// 	Handler: handler.HandleProfile,
 				// },
+			},
+		},
+		{
+			Prefix: "/medication",
+			Middlewares: []echo.MiddlewareFunc{
+				middleware.JWT(),
+			},
+			Routes: []route.Route{
+				{
+					Path:    "/create",
+					Method:  method.POST,
+					Handler: handler.HandleCreateMedication,
+				},
+				{
+					Path:    "/update",
+					Method:  method.PATCH,
+					Handler: handler.HandleUpdateMedication,
+				},
+				{
+					Path:    "/filter",
+					Method:  method.GET,
+					Handler: handler.HandleListMedications,
+				},
+				{
+					Path:    "/detail/:id",
+					Method:  method.GET,
+					Handler: handler.HandleDetailMedication,
+				},
 			},
 		},
 	}
